--- a/XFBarcode/XFBarcode.Android/XFBarcode.Android.csproj
+++ b/XFBarcode/XFBarcode.Android/XFBarcode.Android.csproj
@@ -62,6 +62,12 @@
     <PackageReference Include="Acr.UserDialogs">
       <Version>6.5.1</Version>
     </PackageReference>
+    <PackageReference Include="Rg.Plugins.Popup">
+      <Version>1.0.4</Version>
+    </PackageReference>
+    <PackageReference Include="Splat">
+      <Version>2.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.v4">
       <Version>25.4.0.2</Version>
     </PackageReference>
