--- a/XFBarcode/XFBarcode.iOS/XFBarcode.iOS.csproj
+++ b/XFBarcode/XFBarcode.iOS/XFBarcode.iOS.csproj
@@ -124,6 +124,12 @@
     <PackageReference Include="Acr.UserDialogs">
       <Version>6.5.1</Version>
     </PackageReference>
+    <PackageReference Include="Rg.Plugins.Popup">
+      <Version>1.0.4</Version>
+    </PackageReference>
+    <PackageReference Include="Splat">
+      <Version>2.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="2.4.0.282" />
     <PackageReference Include="Prism.DryIoc.Forms" Version="7.0.0.168-pre" />
     <PackageReference Include="ZXing.Net.Mobile">
