--- a/XFBarcode/XFBarcode/XFBarcode.csproj
+++ b/XFBarcode/XFBarcode/XFBarcode.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Acr.UserDialogs" Version="6.5.1" />
+    <PackageReference Include="Rg.Plugins.Popup" Version="1.0.4" />
+    <PackageReference Include="Splat" Version="2.0.0" />
     <PackageReference Include="Xamarin.Forms" Version="2.4.0.282" />
     <PackageReference Include="Prism.DryIoc.Forms" Version="7.0.0.168-pre" />
     <PackageReference Include="ZXing.Net.Mobile" Version="2.3.2" nowarn="NU1701" />
